--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
 
         <activity
             android:name=".RobotControllerActivity"
-            android:screenOrientation="landscape"
+            android:screenOrientation="sensorLandscape"
             android:label="@string/app_name"
             android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen" >
             <intent-filter>
